# rating-reports

./: .gitignore  Makefile  README.md  debug_imports.py  demo.cast  pyproject.toml
src/: file_reader.py  main.py
src/reports/: average_rating.py  base_report.py
tests/: conftest.py  test_file_reader.py  test_reports.py
